Enhance SEO and content for pressure washing service page
Updated the title and meta description for SEO optimization. Added content to various sections to enhance service descriptions and improve user engagement.

--- a/local/pressure-washing-eggborough.html
+++ b/local/pressure-washing-eggborough.html
@@ -6,10 +6,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title></title>
+<title>Driveway Pressure Washing in Eggborough Goole | Restore Kerb Appeal</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-eggborough.html">
-<meta name="description" content="">
+<meta name="description" content="Professional driveway pressure washing in Eggborough Goole. Remove moss, oil stains, and grime. Book today for a cleaner, safer driveway.">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
 h1 {
@@ -133,12 +133,12 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Section 1 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h1></h1>
-<p></p>
-<p></p>
-<p></p>
+<h1>Professional Driveway Pressure Washing in Eggborough Goole</h1>
+<p>Your driveway is one of the first things people notice about your home, and over time it can become stained with oil, algae, moss, and ground-in dirt. Our driveway pressure washing service in Eggborough Goole is designed to restore your surface safely and effectively, bringing back its original appearance. Using commercial-grade pressure washing equipment, we clean block paving, concrete, tarmac, and stone driveways without causing damage. Regular pressure washing not only improves kerb appeal but also helps prevent slippery surfaces that can become a safety risk.</p>
+<p>Homes across Eggborough Goole experience damp conditions that encourage moss and algae growth, particularly on shaded driveways. Our professional pressure washing process removes these contaminants at the root, not just the surface. We tailor water pressure and cleaning methods to suit your driveway material, ensuring a deep clean without erosion. Whether you’re preparing for a property sale or simply want your driveway looking its best, our local service delivers reliable, long-lasting results you can trust.</p>
+<p>Choosing a local driveway pressure washing specialist in Eggborough Goole means fast response times, honest pricing, and attention to detail. We take pride in helping homeowners maintain clean, well-presented outdoor spaces that add value to their property. With clear communication and proven results, our pressure washing service makes it easy to refresh your driveway with minimal disruption. One visit can dramatically improve the look of your home’s exterior.</p>
 <img src="/images/pressure-washing-driveway.webp"
-alt=""
+alt="Freshly cleaned block paving driveway after professional pressure washing in Eggborough Goole"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -147,12 +147,12 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 2 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
-<p></p>
+<h2>Patio Pressure Washing Services in Eggborough Goole</h2>
+<p>Patios are made for relaxing and entertaining, but exposure to the elements can quickly leave them looking tired and unsafe. Our patio pressure washing service in Eggborough Goole removes built-up dirt, algae, and lichen that make surfaces slippery and unattractive. We clean all types of patio materials, including natural stone, concrete slabs, porcelain, and paving, using professional pressure washing techniques tailored to each surface. The result is a brighter, safer patio that’s ready to enjoy again.</p>
+<p>In Eggborough Goole, patios often suffer from green algae due to shade and moisture. Left untreated, this growth can cause permanent staining and surface damage. Our pressure washing service penetrates deep into the pores of the patio, lifting grime and restoring the natural colour of the stone or slabs. We work carefully around garden features, furniture, and drainage areas, ensuring a thorough clean without mess or damage.</p>
+<p>A professionally pressure washed patio can completely transform your garden space. Whether you’re preparing for summer gatherings or simply want a cleaner outdoor area, our Eggborough Goole patio pressure washing service delivers visible results with long-term benefits.</p>
 <img src="/images/pressure-washing-patios.webp"
-alt=""
+alt="Stone patio restored after pressure washing service in Eggborough Goole garden"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -161,12 +161,12 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 3 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
-<p></p>
+<h2>Exterior Wall Pressure Washing in Eggborough Goole</h2>
+<p>Over time, exterior walls collect dirt, pollution stains, moss, and algae that can dull your property’s appearance. Our house and garden wall pressure washing service in Eggborough Goole is designed to safely clean brickwork, rendered surfaces, stone walls, and boundary walls. Using controlled pressure washing methods, we remove unsightly buildup while protecting the integrity of your walls. This service instantly improves the look of your home and surrounding outdoor areas.</p>
+<p>Eggborough Goole properties are exposed to changing weather conditions that encourage organic growth on walls, especially in shaded or north-facing areas. Regular pressure washing helps prevent long-term staining and surface deterioration. Our experienced approach ensures effective cleaning without forcing water into joints or causing damage.</p>
+<p>Clean walls make a noticeable difference to your property’s overall presentation. Our local pressure washing service helps homeowners in Eggborough Goole maintain smart, well-kept exteriors all year round.</p>
 <img src="/images/pressure-washing-walls.webp"
-alt=""
+alt="Brick garden wall cleaned using pressure washing in Eggborough Goole"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -175,12 +175,12 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 4 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
-<p></p>
-<p></p>
-<p></p>
+<h2>Decking and Fence Pressure Washing in Eggborough Goole</h2>
+<p>Wooden decking and fencing can quickly lose their appearance due to algae, dirt, and weather exposure. Our decking and fence pressure washing service in Eggborough Goole restores tired timber by removing built-up grime and slippery growth. We use adjustable pressure washing techniques to clean effectively without damaging wood fibres, helping to extend the life of your decking and fencing.</p>
+<p>In damp conditions common around Eggborough Goole, untreated decking can become hazardous underfoot, while fences may develop green staining and mould. Our pressure washing process lifts dirt from deep within the grain, revealing a cleaner, fresher finish. This not only improves appearance but also prepares surfaces for staining, sealing, or painting if required. We take care to protect surrounding plants and garden features during the cleaning process, ensuring a neat and professional result.</p>
+<p>Regular pressure washing is one of the most effective ways to maintain decking and fencing. Our Eggborough Goole service helps homeowners keep outdoor spaces safe, attractive, and well cared for throughout the year.</p>
 <img src="/images/pressure-wash-decking.webp"
-alt=""
+alt="Timber decking and fence after professional pressure washing in Eggborough Goole"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -189,14 +189,14 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <!-- Section 5 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2></h2>
+<h2>Local Pressure Washing Experts in Eggborough Goole You Can Trust</h2>
 <div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
 <button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
 <img id="lightboxImg" src="" alt="">
 </div>
-<p></p>
+<p>If you’re looking for reliable, professional pressure washing in Eggborough Goole, we’re here to help. From driveways and patios to walls, decking, and fencing, our local service delivers outstanding results with friendly, honest customer care. Refresh your outdoor spaces, improve safety, and boost your property’s appearance today. Contact us now to book your pressure washing service in Eggborough Goole and see the difference a professional clean can make.</p>
 <img src="/images/pressure-washing-algae.webp"
-alt=""
+alt="Pressure Washing Services in Eggborough Goole | Driveways, Patios & More"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
