Implement FAQ schema for pressure washing page
Added JSON-LD FAQ schema for SEO to enhance search visibility and user experience.

--- a/how-to/pressure-wash-driveways.html
+++ b/how-to/pressure-wash-driveways.html
@@ -1,35 +1,139 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
 
-<!-- JSON-LD FAQ Schema for SEO -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{ "question": "What is pressure washing?", "acceptedAnswer": { "text": "Pressure washing is a professional cleaning method that uses controlled high-pressure water to remove dirt, moss, algae, oil stains and grime from hard surfaces." } },
-{ "question": "Is pressure washing safe for my driveway?", "acceptedAnswer": { "text": "Yes. When carried out professionally, pressure washing is safe. Pressure levels are adjusted to suit block paving, concrete, tarmac and stone driveways." } },
-{ "question": "What driveway surfaces can be pressure washed?", "acceptedAnswer": { "text": "Block paving, concrete, tarmac, imprinted concrete and natural stone driveways can all be safely pressure washed." } },
-{ "question": "How do you prepare a driveway before pressure washing?", "acceptedAnswer": { "text": "Preparation includes removing loose debris, inspecting joints and surface condition, and applying pre-treatment solutions where moss or algae growth is present." } },
-{ "question": "Do you use chemicals during pressure washing?", "acceptedAnswer": { "text": "Eco-friendly and biodegradable treatments are used only when needed to break down stubborn dirt, algae or oil stains." } },
-{ "question": "How long does driveway pressure washing take?", "acceptedAnswer": { "text": "Most driveway pressure washing jobs take between one and three hours depending on size and condition." } },
-{ "question": "Can pressure washing remove oil stains?", "acceptedAnswer": { "text": "Yes. Specialist degreasers combined with pressure washing can significantly reduce or fully remove oil stains." } },
-{ "question": "Do you pressure wash patios as well as driveways?", "acceptedAnswer": { "text": "Yes. We clean patios, walls, decking and fencing alongside driveway pressure washing." } },
-{ "question": "Will pressure washing remove weeds and moss?", "acceptedAnswer": { "text": "Pressure washing removes visible weeds, moss and algae at the root, helping to slow regrowth." } },
-{ "question": "Do I need to be home during the service?", "acceptedAnswer": { "text": "No. As long as access to the area and a water supply are available, pressure washing can be completed without you being present." } },
-{ "question": "What happens after pressure washing a driveway?", "acceptedAnswer": { "text": "The surface is thoroughly rinsed, and for block paving, re-sanding the joints is recommended to maintain stability." } },
-{ "question": "How often should a driveway be pressure washed?", "acceptedAnswer": { "text": "Most driveways benefit from pressure washing every 12 to 24 months." } },
-{ "question": "Can pressure washing damage block paving?", "acceptedAnswer": { "text": "No. Professional techniques control pressure to protect both the surface and the jointing." } },
-{ "question": "Is pressure washing environmentally friendly?", "acceptedAnswer": { "text": "Yes. We use water-efficient equipment and environmentally responsible cleaning products wherever possible." } },
-{ "question": "Is pressure washing weather dependent?", "acceptedAnswer": { "text": "Pressure washing can be carried out in most conditions, although heavy rain or freezing temperatures are avoided." } },
-{ "question": "Can you pressure wash walls and fencing?", "acceptedAnswer": { "text": "Yes. Exterior walls, fencing and other outdoor surfaces can be safely pressure washed." } },
-{ "question": "Do you offer commercial pressure washing?", "acceptedAnswer": { "text": "Yes. We provide pressure washing for commercial properties, car parks and walkways." } },
-{ "question": "Is pressure washing noisy?", "acceptedAnswer": { "text": "Some noise is expected, but disruption is minimal and short-lived." } },
-{ "question": "How much does driveway pressure washing cost?", "acceptedAnswer": { "text": "Costs vary depending on size and condition. Free, no-obligation quotes are available." } },
-{ "question": "Why choose a local Doncaster pressure washing service?", "acceptedAnswer": { "text": "Local expertise, fast response times and trusted results make a professional Doncaster pressure washing service the best choice." } }
-]
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title></title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-?????????????????????.html">
+<meta name="description" content="">
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
 }
-</script>
-</head>
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/pressure-washing.html" class="call-btn" aria-label="Get a Quote for Pressure Washing">📝 Get Instant Quote</a>
+</header>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+
 <body>
 
 <!-- Introduction -->
@@ -97,3 +201,32 @@ Professional pressure washing in Doncaster is one of the most effective ways to 
 
 </body>
 </html>
+<!-- JSON-LD FAQ Schema for SEO -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{ "question": "What is pressure washing?", "acceptedAnswer": { "text": "Pressure washing is a professional cleaning method that uses controlled high-pressure water to remove dirt, moss, algae, oil stains and grime from hard surfaces." } },
+{ "question": "Is pressure washing safe for my driveway?", "acceptedAnswer": { "text": "Yes. When carried out professionally, pressure washing is safe. Pressure levels are adjusted to suit block paving, concrete, tarmac and stone driveways." } },
+{ "question": "What driveway surfaces can be pressure washed?", "acceptedAnswer": { "text": "Block paving, concrete, tarmac, imprinted concrete and natural stone driveways can all be safely pressure washed." } },
+{ "question": "How do you prepare a driveway before pressure washing?", "acceptedAnswer": { "text": "Preparation includes removing loose debris, inspecting joints and surface condition, and applying pre-treatment solutions where moss or algae growth is present." } },
+{ "question": "Do you use chemicals during pressure washing?", "acceptedAnswer": { "text": "Eco-friendly and biodegradable treatments are used only when needed to break down stubborn dirt, algae or oil stains." } },
+{ "question": "How long does driveway pressure washing take?", "acceptedAnswer": { "text": "Most driveway pressure washing jobs take between one and three hours depending on size and condition." } },
+{ "question": "Can pressure washing remove oil stains?", "acceptedAnswer": { "text": "Yes. Specialist degreasers combined with pressure washing can significantly reduce or fully remove oil stains." } },
+{ "question": "Do you pressure wash patios as well as driveways?", "acceptedAnswer": { "text": "Yes. We clean patios, walls, decking and fencing alongside driveway pressure washing." } },
+{ "question": "Will pressure washing remove weeds and moss?", "acceptedAnswer": { "text": "Pressure washing removes visible weeds, moss and algae at the root, helping to slow regrowth." } },
+{ "question": "Do I need to be home during the service?", "acceptedAnswer": { "text": "No. As long as access to the area and a water supply are available, pressure washing can be completed without you being present." } },
+{ "question": "What happens after pressure washing a driveway?", "acceptedAnswer": { "text": "The surface is thoroughly rinsed, and for block paving, re-sanding the joints is recommended to maintain stability." } },
+{ "question": "How often should a driveway be pressure washed?", "acceptedAnswer": { "text": "Most driveways benefit from pressure washing every 12 to 24 months." } },
+{ "question": "Can pressure washing damage block paving?", "acceptedAnswer": { "text": "No. Professional techniques control pressure to protect both the surface and the jointing." } },
+{ "question": "Is pressure washing environmentally friendly?", "acceptedAnswer": { "text": "Yes. We use water-efficient equipment and environmentally responsible cleaning products wherever possible." } },
+{ "question": "Is pressure washing weather dependent?", "acceptedAnswer": { "text": "Pressure washing can be carried out in most conditions, although heavy rain or freezing temperatures are avoided." } },
+{ "question": "Can you pressure wash walls and fencing?", "acceptedAnswer": { "text": "Yes. Exterior walls, fencing and other outdoor surfaces can be safely pressure washed." } },
+{ "question": "Do you offer commercial pressure washing?", "acceptedAnswer": { "text": "Yes. We provide pressure washing for commercial properties, car parks and walkways." } },
+{ "question": "Is pressure washing noisy?", "acceptedAnswer": { "text": "Some noise is expected, but disruption is minimal and short-lived." } },
+{ "question": "How much does driveway pressure washing cost?", "acceptedAnswer": { "text": "Costs vary depending on size and condition. Free, no-obligation quotes are available." } },
+{ "question": "Why choose a local Doncaster pressure washing service?", "acceptedAnswer": { "text": "Local expertise, fast response times and trusted results make a professional Doncaster pressure washing service the best choice." } }
+]
+}
+</script>
