Enhance pressure washing page with footer and CTA
Added footer and closing call-to-action section to the page.

--- a/how-to/pressure-wash-driveways.html
+++ b/how-to/pressure-wash-driveways.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-
-
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
@@ -184,7 +182,16 @@ Professional pressure washing in Doncaster is one of the most effective ways to 
 <p>Costs vary by size and condition. Free quotes are available.</p>
 <h3>20. Why choose a local Doncaster pressure washing service?</h3>
 <p>Local knowledge, fast response, and trusted results make us the preferred choice.</p>
-</section>
+</section> 
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+</footer>
+
 
 <!-- Closing Call-to-Action -->
 <section>
@@ -192,10 +199,6 @@ Professional pressure washing in Doncaster is one of the most effective ways to 
 <p>Restore your driveway, patio, walls, decking, and fencing with our professional pressure washing services. Contact our Doncaster team for a free quote and see your outdoor spaces transformed today!</p>
 </section>
 
-<!-- Alt Text -->
-<section>
-<p><strong>Alt Text:</strong> Clean pressure-washed driveway in Doncaster showing block paving with moss and dirt removed.</p>
-</section>
 
 </body>
 </html>
