Add booking section for pressure washing services
Added a new section for booking pressure washing services and removed the duplicate closing call-to-action section.

--- a/how-to/pressure-wash-driveways.html
+++ b/how-to/pressure-wash-driveways.html
@@ -134,6 +134,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Introduction -->
 <section>
+<h1>Doncaster Pressure Washing for Driveways</h1>
 <p>
 Professional pressure washing in Doncaster is one of the most effective ways to restore dirty driveways, patios, walls, decking and fencing. Over time, grime, moss, algae and oil stains build up, reducing kerb appeal and safety. Our expert team uses commercial-grade equipment and eco-friendly cleaning solutions to deliver deep, damage-free cleaning. Whether improving kerb appeal, increasing safety, or maintaining property value, our local Doncaster service guarantees reliable results from start to finish.
 </p>
@@ -182,7 +183,13 @@ Professional pressure washing in Doncaster is one of the most effective ways to 
 <p>Costs vary by size and condition. Free quotes are available.</p>
 <h3>20. Why choose a local Doncaster pressure washing service?</h3>
 <p>Local knowledge, fast response, and trusted results make us the preferred choice.</p>
-</section> 
+</section>
+
+<!-- Closing Call-to-Action -->
+<section>
+<h2>Book Your Doncaster Pressure Washing Service Today</h2>
+<p>Restore your driveway, patio, walls, decking, and fencing with our professional pressure washing services. Contact our Doncaster team for a free quote and see your outdoor spaces transformed today!</p>
+</section>
 
 </main>
 
@@ -192,16 +199,9 @@ Professional pressure washing in Doncaster is one of the most effective ways to 
 
 </footer>
 
-
-<!-- Closing Call-to-Action -->
-<section>
-<h2>Book Your Doncaster Pressure Washing Service Today</h2>
-<p>Restore your driveway, patio, walls, decking, and fencing with our professional pressure washing services. Contact our Doncaster team for a free quote and see your outdoor spaces transformed today!</p>
-</section>
-
-
 </body>
 </html>
+
 <!-- JSON-LD FAQ Schema for SEO -->
 <script type="application/ld+json">
 {
