Add call button for pressure washing service

--- a/how-to/pressure-wash-driveways.html
+++ b/how-to/pressure-wash-driveways.html
@@ -191,6 +191,11 @@ Professional pressure washing in Doncaster is one of the most effective ways to 
 <p>Restore your driveway, patio, walls, decking, and fencing with our professional pressure washing services. Contact our Doncaster team for a free quote and see your outdoor spaces transformed today!</p>
 </section>
 
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
 </main>
 
 <!-- ✅ FOOTER -->
