--- a/how-to/pressure-wash-driveways.html
+++ b/how-to/pressure-wash-driveways.html
@@ -207,32 +207,171 @@ Professional pressure washing in Doncaster is one of the most effective ways to 
 </body>
 </html>
 
-<!-- JSON-LD FAQ Schema for SEO -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
 "@type": "FAQPage",
 "mainEntity": [
-{ "question": "What is pressure washing?", "acceptedAnswer": { "text": "Pressure washing is a professional cleaning method that uses controlled high-pressure water to remove dirt, moss, algae, oil stains and grime from hard surfaces." } },
-{ "question": "Is pressure washing safe for my driveway?", "acceptedAnswer": { "text": "Yes. When carried out professionally, pressure washing is safe. Pressure levels are adjusted to suit block paving, concrete, tarmac and stone driveways." } },
-{ "question": "What driveway surfaces can be pressure washed?", "acceptedAnswer": { "text": "Block paving, concrete, tarmac, imprinted concrete and natural stone driveways can all be safely pressure washed." } },
-{ "question": "How do you prepare a driveway before pressure washing?", "acceptedAnswer": { "text": "Preparation includes removing loose debris, inspecting joints and surface condition, and applying pre-treatment solutions where moss or algae growth is present." } },
-{ "question": "Do you use chemicals during pressure washing?", "acceptedAnswer": { "text": "Eco-friendly and biodegradable treatments are used only when needed to break down stubborn dirt, algae or oil stains." } },
-{ "question": "How long does driveway pressure washing take?", "acceptedAnswer": { "text": "Most driveway pressure washing jobs take between one and three hours depending on size and condition." } },
-{ "question": "Can pressure washing remove oil stains?", "acceptedAnswer": { "text": "Yes. Specialist degreasers combined with pressure washing can significantly reduce or fully remove oil stains." } },
-{ "question": "Do you pressure wash patios as well as driveways?", "acceptedAnswer": { "text": "Yes. We clean patios, walls, decking and fencing alongside driveway pressure washing." } },
-{ "question": "Will pressure washing remove weeds and moss?", "acceptedAnswer": { "text": "Pressure washing removes visible weeds, moss and algae at the root, helping to slow regrowth." } },
-{ "question": "Do I need to be home during the service?", "acceptedAnswer": { "text": "No. As long as access to the area and a water supply are available, pressure washing can be completed without you being present." } },
-{ "question": "What happens after pressure washing a driveway?", "acceptedAnswer": { "text": "The surface is thoroughly rinsed, and for block paving, re-sanding the joints is recommended to maintain stability." } },
-{ "question": "How often should a driveway be pressure washed?", "acceptedAnswer": { "text": "Most driveways benefit from pressure washing every 12 to 24 months." } },
-{ "question": "Can pressure washing damage block paving?", "acceptedAnswer": { "text": "No. Professional techniques control pressure to protect both the surface and the jointing." } },
-{ "question": "Is pressure washing environmentally friendly?", "acceptedAnswer": { "text": "Yes. We use water-efficient equipment and environmentally responsible cleaning products wherever possible." } },
-{ "question": "Is pressure washing weather dependent?", "acceptedAnswer": { "text": "Pressure washing can be carried out in most conditions, although heavy rain or freezing temperatures are avoided." } },
-{ "question": "Can you pressure wash walls and fencing?", "acceptedAnswer": { "text": "Yes. Exterior walls, fencing and other outdoor surfaces can be safely pressure washed." } },
-{ "question": "Do you offer commercial pressure washing?", "acceptedAnswer": { "text": "Yes. We provide pressure washing for commercial properties, car parks and walkways." } },
-{ "question": "Is pressure washing noisy?", "acceptedAnswer": { "text": "Some noise is expected, but disruption is minimal and short-lived." } },
-{ "question": "How much does driveway pressure washing cost?", "acceptedAnswer": { "text": "Costs vary depending on size and condition. Free, no-obligation quotes are available." } },
-{ "question": "Why choose a local Doncaster pressure washing service?", "acceptedAnswer": { "text": "Local expertise, fast response times and trusted results make a professional Doncaster pressure washing service the best choice." } }
+{
+"@type": "Question",
+"name": "What is pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Pressure washing is a professional cleaning method that uses controlled high-pressure water to remove dirt, moss, algae, oil stains and grime from hard surfaces."
+}
+},
+{
+"@type": "Question",
+"name": "Is pressure washing safe for my driveway?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. When carried out professionally, pressure washing is safe. Pressure levels are adjusted to suit block paving, concrete, tarmac and stone driveways."
+}
+},
+{
+"@type": "Question",
+"name": "What driveway surfaces can be pressure washed?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Block paving, concrete, tarmac, imprinted concrete and natural stone driveways can all be safely pressure washed."
+}
+},
+{
+"@type": "Question",
+"name": "How do you prepare a driveway before pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Preparation includes removing loose debris, inspecting joints and surface condition, and applying pre-treatment solutions where moss or algae growth is present."
+}
+},
+{
+"@type": "Question",
+"name": "Do you use chemicals during pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Eco-friendly and biodegradable treatments are used only when needed to break down stubborn dirt, algae or oil stains."
+}
+},
+{
+"@type": "Question",
+"name": "How long does driveway pressure washing take?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most driveway pressure washing jobs take between one and three hours depending on size and condition."
+}
+},
+{
+"@type": "Question",
+"name": "Can pressure washing remove oil stains?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. Specialist degreasers combined with pressure washing can significantly reduce or fully remove oil stains."
+}
+},
+{
+"@type": "Question",
+"name": "Do you pressure wash patios as well as driveways?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. We clean patios, walls, decking and fencing alongside driveway pressure washing."
+}
+},
+{
+"@type": "Question",
+"name": "Will pressure washing remove weeds and moss?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Pressure washing removes visible weeds, moss and algae at the root, helping to slow regrowth."
+}
+},
+{
+"@type": "Question",
+"name": "Do I need to be home during the service?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "No. As long as access to the area and a water supply are available, pressure washing can be completed without you being present."
+}
+},
+{
+"@type": "Question",
+"name": "What happens after pressure washing a driveway?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "The surface is thoroughly rinsed, and for block paving, re-sanding the joints is recommended to maintain stability."
+}
+},
+{
+"@type": "Question",
+"name": "How often should a driveway be pressure washed?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Most driveways benefit from pressure washing every 12 to 24 months."
+}
+},
+{
+"@type": "Question",
+"name": "Can pressure washing damage block paving?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "No. Professional techniques control pressure to protect both the surface and the jointing."
+}
+},
+{
+"@type": "Question",
+"name": "Is pressure washing environmentally friendly?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. We use water-efficient equipment and environmentally responsible cleaning products wherever possible."
+}
+},
+{
+"@type": "Question",
+"name": "Is pressure washing weather dependent?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Pressure washing can be carried out in most conditions, although heavy rain or freezing temperatures are avoided."
+}
+},
+{
+"@type": "Question",
+"name": "Can you pressure wash walls and fencing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. Exterior walls, fencing and other outdoor surfaces can be safely pressure washed."
+}
+},
+{
+"@type": "Question",
+"name": "Do you offer commercial pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes. We provide pressure washing for commercial properties, car parks and walkways."
+}
+},
+{
+"@type": "Question",
+"name": "Is pressure washing noisy?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Some noise is expected, but disruption is minimal and short-lived."
+}
+},
+{
+"@type": "Question",
+"name": "How much does driveway pressure washing cost?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Costs vary depending on size and condition. Free, no-obligation quotes are available."
+}
+},
+{
+"@type": "Question",
+"name": "Why choose a local Doncaster pressure washing service?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Local expertise, fast response times and trusted results make a professional Doncaster pressure washing service the best choice."
+}
+}
 ]
 }
 </script>
