--- a/how-to/pressure-wash-driveways.html
+++ b/how-to/pressure-wash-driveways.html
@@ -4,10 +4,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<title></title>
+<title>Doncaster Driveway Pressure Washing | Home Repairs 4U</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html">
-<meta name="description" content="">
+<meta name="description" content="Professional driveway pressure washing in Doncaster. Restore driveways, patios, walls & decking with safe, eco-friendly cleaning. Get a free quote today!">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
 h1 {
