--- a/how-to/pressure-wash-driveways.html
+++ b/how-to/pressure-wash-driveways.html
@@ -381,7 +381,7 @@ Professional pressure washing in Doncaster is one of the most effective ways to 
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/local/pressure-washing-???????????????????????.html",
+"url": "https://homerepairs4u.com/how-to/pressure-wash-driveways.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -394,10 +394,10 @@ Professional pressure washing in Doncaster is one of the most effective ways to 
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.5333,???????????????????
-"longitude": -1.1166?????????????????
+"latitude": 53.5227,
+"longitude": -1.324
 },
-"areaServed": "?????????????????/////",
+"areaServed": "Doncaster",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
