--- a/how-to/pressure-wash-driveways.html
+++ b/how-to/pressure-wash-driveways.html
@@ -138,6 +138,12 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>
 Professional pressure washing in Doncaster is one of the most effective ways to restore dirty driveways, patios, walls, decking and fencing. Over time, grime, moss, algae and oil stains build up, reducing kerb appeal and safety. Our expert team uses commercial-grade equipment and eco-friendly cleaning solutions to deliver deep, damage-free cleaning. Whether improving kerb appeal, increasing safety, or maintaining property value, our local Doncaster service guarantees reliable results from start to finish.
 </p>
+<img src="/images/pressure-washing-driveway.webp"
+alt="Before and after pressure washing of a driveway, showing restored clean surface."
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 </section>
 
 <!-- FAQ Section -->
