--- a/index.html
+++ b/index.html
@@ -122,15 +122,20 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 
 <!-- Section 1 -->
 <section style="margin-bottom:40px; text-align:center;">
-<h2>Internal Minor Home Repairs</h2>
-<p>Internal minor home repairs cover all the small jobs that make a big difference to your home. From fixing doors that won’t close properly and repairing damaged walls, to replacing broken fittings and sorting loose fixtures, every job is handled with care and attention to detail. These are the types of repairs that often get put off, but leaving them can lead to bigger problems later. Getting them sorted quickly keeps your home safe, tidy and comfortable. Whether it’s wear and tear, accidental damage or general maintenance, internal minor repairs help keep everything working as it should, without the cost or disruption of major building work.</p>
-<img src="/images/internal-repairs.webp"
-alt="Internal minor home repairs in Doncaster, fixing doors, walls, and small household issues professionally"
+<h2>Pressure Washing</h2>
+<p>Pressure washing is a fast and effective way to clean outdoor surfaces and restore their original look. Over time, driveways, paths, walls, decking and roofs can become dirty, slippery and stained with moss, algae and grime. Professional pressure washing removes this build-up safely, improving both appearance and safety. Clean surfaces not only look better but also last longer when kept free from damaging dirt and growth. Pressure washing is ideal for freshening up your property, preparing surfaces for painting or simply making everything look clean, tidy and well cared for.</p>
+<p>Looking to restore your driveway, patio, or outdoor surfaces? Our
+<a href="https://homerepairs4u.com/how-to/pressure-wash-driveways.html"
+title="Driveway pressure washing in Doncaster">
+professional pressure washing services
+</a> are fast, eco-friendly, and highly effective.</p>
+<img src="/images/pressure-wash.webp"
+alt="Pressure washing in Doncaster for driveways, paths, decking and roofs"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
 onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
+</section> 
 
 <!-- Section 2 -->
 <section style="margin-bottom:40px; text-align:center;">
@@ -186,18 +191,6 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Regular window cleaning keeps your home or business looking smart, bright and well maintained. Clean windows let in more natural light and improve the overall appearance of your property. A reliable regular service means your windows are kept consistently clear without you having to worry about it. Frames, sills and glass are cleaned thoroughly, removing dirt, dust and marks left by weather and traffic. Whether you need monthly, fortnightly or scheduled visits, regular window cleaning helps protect your windows, keeps them looking their best and saves you time and effort.</p>
 <img src="/images/window-cleaning-service.webp"
 alt="Regular window cleaning in Doncaster for homes and business with clear, streak free results"
-style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
-onclick="openLightbox(this.src, this.alt)"
-tabindex="0"
-onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
-</section>
-
-<!-- Section 7 -->
-<section style="margin-bottom:40px; text-align:center;">
-<h2>Pressure Washing</h2>
-<p>Pressure washing is a fast and effective way to clean outdoor surfaces and restore their original look. Over time, driveways, paths, walls, decking and roofs can become dirty, slippery and stained with moss, algae and grime. Professional pressure washing removes this build-up safely, improving both appearance and safety. Clean surfaces not only look better but also last longer when kept free from damaging dirt and growth. Pressure washing is ideal for freshening up your property, preparing surfaces for painting or simply making everything look clean, tidy and well cared for.</p>
-<img src="/images/pressure-wash.webp"
-alt="Pressure washing in Doncaster for driveways, paths, decking and roofs"
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
